Fixed : error not visible bug

--- a/css/main.css
+++ b/css/main.css
@@ -696,14 +696,13 @@ font-family:
 
 .tab-dirty-dot{
 
-    color:grey;
+    color:white;
 
     font-size:15px;
 
     display:flex;
 
     align-items:center;
-    text-shadow: 0px 0px 5px var(--text-primary);
 }
 
 .search-panel{
